# PandasBanking

./: README.md  pyproject.toml
Codigo/: README.md  cuaderno_modelo_reglog.ipynb  main.py  mi_primer_pipeline.pkl  mi_segundo_pipeline.pkl  modelo_bank_mkt.ipynb  streamlit.ipynb  testeo_api.ipynb
Datos/: README.md  bank_mkt_pipeline.pkl
Documentacion/: README.md
api/: README.md  main.py
app/: README.md  app.py
