[tool.poetry]
name = "pandasbanking"
version = "0.1.0"
description = "Proyecto final banking"
authors = ["juangonzalez <juank.gonzalezr1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
ucimlrepo = "^0.0.7"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
requests = "^2.32.3"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
